sample-node-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
